go-node - logout

--- a/go-node/go-barber/src/app/views/auth/signup.njk
+++ b/go-node/go-barber/src/app/views/auth/signup.njk
@@ -24,8 +24,8 @@
   </form>
 
   <script type="text/javascript">
-    let avatarInput = document.getElementById('avatar')
-    let img = document.querySelector('label[for=avatar] img')
+    var avatarInput = document.getElementById('avatar')
+    var img = document.querySelector('label[for=avatar] img')
 
     avatarInput.onchange = function (e) {
       img.classList.add('preview')
