--- a/go-node/go-barber/src/app/views/dashboard.njk
+++ b/go-node/go-barber/src/app/views/dashboard.njk
@@ -1,7 +1,22 @@
 {% extends "_layouts/default.njk" %}
 
 {% block body %}
-  <h1>Olá, {{ user.name }} </h1>
+  <div class="content">
+    <strong>Olá, {{ user.name }}</strong>
+    <p>Inicie um agendamento, escolhendo um profissional abaixo:</p>
 
-  <a href="/logout">Sair</a>
+    <ul>
+      {% for provider in providers %}
+        <li class="provider">
+          <div>
+            <img src="" />
+            <strong>{{ provider.name }}</strong>
+          </div>
+          <a href="">+</a>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <a href="/logout" class="logout">Sair</a>
+  </div>
 {% endblock %}
