--- a/go-node/go-barber/src/app/views/appointments/create.njk
+++ b/go-node/go-barber/src/app/views/appointments/create.njk
@@ -17,6 +17,7 @@
       <div id="hours"></div>
 
       <button type"submit">Agendar</button>
+      <a href="/app/dashboard" class="logout">Voltar</a>
     </form>
   </div>
 
